[gd_scene load_steps=3 format=3 uid="uid://cd883oshwdox5"]

[ext_resource type="PackedScene" uid="uid://cqjowqqvo6t6e" path="res://good_job_star.tscn" id="1_4mevm"]
[ext_resource type="Script" path="res://level_button.gd" id="1_bcfk1"]

[node name="Level1Button" type="Button"]
custom_minimum_size = Vector2(220, 50)
text = "Level 1"
script = ExtResource("1_bcfk1")

[node name="GoodJobStar2" parent="." instance=ExtResource("1_4mevm")]
position = Vector2(69, -64)
scale = Vector2(0.3, 0.3)

[node name="GoodJobStar" parent="." instance=ExtResource("1_4mevm")]
position = Vector2(120, -64)
scale = Vector2(0.3, 0.3)

[node name="GoodJobStar3" parent="." instance=ExtResource("1_4mevm")]
position = Vector2(169, -64)
scale = Vector2(0.3, 0.3)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = -38.0
offset_right = 247.0
offset_bottom = -2.0
text = "HighScore"

[connection signal="pressed" from="." to="." method="play_level"]
